# rust-exercises

./: Cargo.toml
src/: anagram_checker.rs  area_of_a_rectangular_room.rs  async.rs  box_smart_pointer.rs  comparing_numbers.rs  counting_characters.rs  enum_hashmaps.rs  json.rs  mad_lib.rs  main.rs  numbers_to_names.rs  password_manager.rs  pizza_party.rs  retirement_calculator.rs  self_checkout.rs  simple_math.rs
src/macros/: declarative_macro.rs
src/rustlings/00_intro/: intro1.rs
src/rustlings/02_functions/: functions1.rs  functions3.rs  functions4.rs
src/rustlings/03_if/: if1.rs
src/rustlings/04_primitive_types/: primitive_types2.rs
src/rustlings/06_move_semantics/: move_semantics3.rs
src/rustlings/07_structs/: structs1.rs  structs2.rs  structs3.rs
src/rustlings/08_enums/: enums2.rs  enums3.rs
src/rustlings/09_strings/: strings3.rs
src/rustlings/10_modules/: modules1.rs  modules2.rs  modules3.rs
src/rustlings/11_hashmaps/: hashmaps1.rs  hashmaps2.rs  hashmaps3.rs
src/rustlings/12_options/: options1.rs  options2.rs  options3.rs
src/rustlings/13_error_handling/: errors4.rs  errors6.rs
src/rustlings/15_traits/: traits2.rs  traits3.rs  traits4.rs
src/rustlings/17_tests/: tests1.rs  tests2.rs
src/rustlings/18_iterators/: iterators2.rs  iterators3.rs  iterators4.rs  iterators5.rs
src/rustlings/22_clippy/: clippy1.rs
src/rustlings/23_conversions/: as_ref_mut.rs
