[package]
name = "exercises"
version = "0.1.0"
edition = "2021"

[dependencies]
#serde = { version = "1.0.203", features = ["derive"] }
#serde_json = "1.0.117"
#tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
#syn = "2.0.66"
#chrono = "0.4.38"
#read_input = "0.8.6"
#inquire = "0.7.5"
